--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,11 @@
 
 body {
   font-weight: 500;
-  background: rgb(63, 94, 251);
-  background: radial-gradient(circle, rgba(63, 94, 251, 1) 7%, rgba(170, 70, 252, 1) 94%);
+  background: rgb(162, 165, 182); 
+   background: radial-gradient(circle, rgb(114, 124, 170) 7%, rgba(170, 70, 252, 1) 94%); 
   margin: 0;
   padding: 0;
+ 
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -60,4 +61,22 @@ label {
   margin-top: 5px;
   display: block;
   border-radius: 4px;
+}
+.error {
+      border: 1px solid #FF6565;
+}
+.error-message {
+      color: #FF6565;
+      padding: .5em 2em;
+      height: 1em;
+      position: absolute;
+      transform: translateY(-350%);
+      font-size: .8em;
+     pointer-events: none;
+    }
+.relative{
+  position: relative;
+}
+.navbar-width{
+  width: 100%;
 }
